# scenefun3d

./: .gitignore  MANIFEST.in  pyproject.toml
src/scenefun3d/data_downloader/: data_asset_download.py
src/scenefun3d/eval/affordance_grounding/: create_example_submission.py  evaluate.py  prepare_gt_val_data.py
src/scenefun3d/eval/affordance_grounding/eval_utils/: eval_script.py  util_3d.py
src/scenefun3d/eval/functionality_segmentation/: create_example_submission.py  evaluate.py  prepare_gt_val_data.py
src/scenefun3d/eval/functionality_segmentation/eval_utils/: eval_script.py  util_3d.py
src/scenefun3d/examples/: export_nerfstudio_format.py  project_rgb_on_laser_scan.py  show_annotations.py
src/scenefun3d/utils/: data_parser.py
